[gd_scene load_steps=16 format=3 uid="uid://djdqopu8eq0jn"]

[ext_resource type="Texture2D" uid="uid://ckulhp0sdnvah" path="res://assets/gifts/background.png" id="1_ck3if"]
[ext_resource type="Script" path="res://windows/completed-projects/completed_projects.gd" id="1_pthep"]
[ext_resource type="FontFile" uid="uid://cveouj21bacwl" path="res://assets/fonts/Daniel-Black.otf" id="2_7arwo"]
[ext_resource type="Texture2D" uid="uid://bymxurjjgwxa1" path="res://assets/choose-focus/home.png" id="2_7ng8e"]
[ext_resource type="Texture2D" uid="uid://ck8kbqnwe7bm2" path="res://assets/completed-projects/board.png" id="4_mkbn6"]
[ext_resource type="Texture2D" uid="uid://mw5rdvc7tyi5" path="res://assets/choose-focus/arrow.png" id="5_7nv7l"]

[sub_resource type="Animation" id="Animation_vxakr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_cnvt6"]
resource_name = "in"
length = 0.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.787759, 0.787759, 0.787759, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.3, 1.3)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e2kte"]
_data = {
"RESET": SubResource("Animation_vxakr"),
"in": SubResource("Animation_cnvt6")
}

[sub_resource type="Animation" id="Animation_fs672"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_22mdy"]
resource_name = "in"
length = 0.2
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-1, 1), Vector2(-1.1, 1.1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.894922, 0.894922, 0.894922, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jlywi"]
_data = {
"RESET": SubResource("Animation_fs672"),
"in": SubResource("Animation_22mdy")
}

[sub_resource type="Animation" id="Animation_12ipw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_7y0ni"]
resource_name = "in"
length = 0.2
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 1.1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.886262, 0.886261, 0.886262, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_elea2"]
_data = {
"RESET": SubResource("Animation_12ipw"),
"in": SubResource("Animation_7y0ni")
}

[node name="Completed-Projects" type="Node2D"]
script = ExtResource("1_pthep")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title_Label" type="Node2D" parent="CanvasLayer/HBoxContainer"]
z_index = 8
position = Vector2(0, -290)

[node name="Label" type="Label" parent="CanvasLayer/HBoxContainer/Title_Label"]
offset_left = -557.0
offset_right = 595.0
offset_bottom = 149.0
theme_override_fonts/font = ExtResource("2_7arwo")
theme_override_font_sizes/font_size = 70
text = "Completed Projects"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Background" type="Node2D" parent="CanvasLayer/HBoxContainer"]
modulate = Color(0.434181, 0.287502, 0.183557, 1)

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/HBoxContainer/Background"]
position = Vector2(17, 24)
scale = Vector2(1.1, 1.1)
texture = ExtResource("1_ck3if")

[node name="Buttons" type="Node2D" parent="CanvasLayer/HBoxContainer"]
z_index = 8

[node name="Home" type="Node2D" parent="CanvasLayer/HBoxContainer/Buttons"]
position = Vector2(-450, -230)

[node name="Control" type="Control" parent="CanvasLayer/HBoxContainer/Buttons/Home"]
layout_mode = 3
anchors_preset = 0
offset_left = -27.0
offset_top = -29.0
offset_right = 31.0
offset_bottom = 28.0

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/HBoxContainer/Buttons/Home"]
texture = ExtResource("2_7ng8e")

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/HBoxContainer/Buttons/Home"]
libraries = {
"": SubResource("AnimationLibrary_e2kte")
}

[node name="Left_Arrow" type="Node2D" parent="CanvasLayer/HBoxContainer/Buttons"]
position = Vector2(-525, 75)

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/HBoxContainer/Buttons/Left_Arrow"]
scale = Vector2(-1, 1)
texture = ExtResource("5_7nv7l")

[node name="Left_Arrow" type="Button" parent="CanvasLayer/HBoxContainer/Buttons/Left_Arrow"]
modulate = Color(1, 1, 1, 0)
offset_left = -28.0
offset_top = -34.0
offset_right = 31.0
offset_bottom = 35.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/HBoxContainer/Buttons/Left_Arrow"]
libraries = {
"": SubResource("AnimationLibrary_jlywi")
}

[node name="Right_Arrow" type="Node2D" parent="CanvasLayer/HBoxContainer/Buttons"]
position = Vector2(560, 75)

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/HBoxContainer/Buttons/Right_Arrow"]
texture = ExtResource("5_7nv7l")

[node name="Right_Arrow" type="Button" parent="CanvasLayer/HBoxContainer/Buttons/Right_Arrow"]
modulate = Color(1, 1, 1, 0)
offset_left = -30.0
offset_top = -33.0
offset_right = 32.0
offset_bottom = 33.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/HBoxContainer/Buttons/Right_Arrow"]
libraries = {
"": SubResource("AnimationLibrary_elea2")
}

[node name="Board" type="Node2D" parent="CanvasLayer/HBoxContainer"]
modulate = Color(0.341176, 0.392157, 0.309804, 1)
position = Vector2(21, 100)

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/HBoxContainer/Board"]
texture = ExtResource("4_mkbn6")

[node name="Positions" type="Node2D" parent="CanvasLayer/HBoxContainer"]
position = Vector2(-556, -304)

[node name="Pos1" type="Node2D" parent="CanvasLayer/HBoxContainer/Positions"]
position = Vector2(164, 279)

[node name="Pos2" type="Node2D" parent="CanvasLayer/HBoxContainer/Positions"]
position = Vector2(301, 298)

[node name="Pos3" type="Node2D" parent="CanvasLayer/HBoxContainer/Positions"]
position = Vector2(461, 296)

[node name="Pos4" type="Node2D" parent="CanvasLayer/HBoxContainer/Positions"]
position = Vector2(640, 282)

[node name="Pos5" type="Node2D" parent="CanvasLayer/HBoxContainer/Positions"]
position = Vector2(804, 295)

[node name="Pos6" type="Node2D" parent="CanvasLayer/HBoxContainer/Positions"]
position = Vector2(979, 279)

[node name="Pos7" type="Node2D" parent="CanvasLayer/HBoxContainer/Positions"]
position = Vector2(154, 426)

[node name="Pos8" type="Node2D" parent="CanvasLayer/HBoxContainer/Positions"]
position = Vector2(284, 433)

[node name="Pos9" type="Node2D" parent="CanvasLayer/HBoxContainer/Positions"]
position = Vector2(428, 422)

[node name="Pos10" type="Node2D" parent="CanvasLayer/HBoxContainer/Positions"]
position = Vector2(584, 444)

[node name="Pos11" type="Node2D" parent="CanvasLayer/HBoxContainer/Positions"]
position = Vector2(723, 406)

[node name="Pos12" type="Node2D" parent="CanvasLayer/HBoxContainer/Positions"]
position = Vector2(901, 389)

[node name="Pos13" type="Node2D" parent="CanvasLayer/HBoxContainer/Positions"]
position = Vector2(1033, 407)

[node name="Pos14" type="Node2D" parent="CanvasLayer/HBoxContainer/Positions"]
position = Vector2(184, 530)

[node name="Pos15" type="Node2D" parent="CanvasLayer/HBoxContainer/Positions"]
position = Vector2(369, 528)

[node name="Pos16" type="Node2D" parent="CanvasLayer/HBoxContainer/Positions"]
position = Vector2(514, 522)

[node name="Pos17" type="Node2D" parent="CanvasLayer/HBoxContainer/Positions"]
position = Vector2(702, 527)

[node name="Pos18" type="Node2D" parent="CanvasLayer/HBoxContainer/Positions"]
position = Vector2(836, 505)

[node name="Pos19" type="Node2D" parent="CanvasLayer/HBoxContainer/Positions"]
position = Vector2(973, 511)

[node name="Pos20" type="Node2D" parent="CanvasLayer/HBoxContainer/Positions"]
position = Vector2(1081, 588)

[connection signal="mouse_entered" from="CanvasLayer/HBoxContainer/Buttons/Home/Control" to="." method="_on_control_mouse_entered_HOME"]
[connection signal="mouse_exited" from="CanvasLayer/HBoxContainer/Buttons/Home/Control" to="." method="_on_control_mouse_exited_HOME"]
[connection signal="mouse_entered" from="CanvasLayer/HBoxContainer/Buttons/Left_Arrow/Left_Arrow" to="." method="_on_left_arrow_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/HBoxContainer/Buttons/Left_Arrow/Left_Arrow" to="." method="_on_left_arrow_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/Buttons/Left_Arrow/Left_Arrow" to="." method="_on_left_arrow_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/HBoxContainer/Buttons/Right_Arrow/Right_Arrow" to="." method="_on_right_arrow_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/HBoxContainer/Buttons/Right_Arrow/Right_Arrow" to="." method="_on_right_arrow_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/Buttons/Right_Arrow/Right_Arrow" to="." method="_on_right_arrow_pressed"]
